mc_code/err.txt
g++ -Wall -g   -c -o system.o system.cpp
system.cpp: In member function 'void System::waveFunction(boost::filesystem::ofstream&)':
system.cpp:233:18: error: no match for 'operator=' (operand types are 'arma::cx_double {aka std::complex<double>}' and 'arma::enable_if2<true, const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times> >::result {aka const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times>}')
         innersum = lagrangeBasis.get_phi_r(r)
                  ^
In file included from /usr/include/armadillo:29:0,
                 from channel.h:2,
                 from system.h:1,
                 from system.cpp:4:
/usr/include/c++/5/complex:1252:7: note: candidate: std::complex<double>& std::complex<double>::operator=(double)
       operator=(double __d)
       ^
/usr/include/c++/5/complex:1252:7: note:   no known conversion for argument 1 from 'arma::enable_if2<true, const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times> >::result {aka const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times>}' to 'double'
/usr/include/c++/5/complex:1291:9: note: candidate: template<class _Tp> std::complex<double>& std::complex<double>::operator=(const std::complex<_Tp>&)
         operator=(const complex<_Tp>& __z)
         ^
/usr/include/c++/5/complex:1291:9: note:   template argument deduction/substitution failed:
system.cpp:233:18: note:   'arma::enable_if2<true, const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times> >::result {aka const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times>}' is not derived from 'const std::complex<_Tp>'
         innersum = lagrangeBasis.get_phi_r(r)
                  ^
In file included from /usr/include/armadillo:29:0,
                 from channel.h:2,
                 from system.h:1,
                 from system.cpp:4:
/usr/include/c++/5/complex:1197:12: note: candidate: std::complex<double>& std::complex<double>::operator=(const std::complex<double>&)
     struct complex<double>
            ^
/usr/include/c++/5/complex:1197:12: note:   no known conversion for argument 1 from 'arma::enable_if2<true, const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times> >::result {aka const arma::mtGlue<std::complex<double>, arma::mtGlue<std::complex<double>, arma::Row<double>, arma::subview<std::complex<double> >, arma::glue_mixed_times>, arma::Col<double>, arma::glue_mixed_times>}' to 'const std::complex<double>&'
<builtin>: recipe for target 'system.o' failed
make: *** [system.o] Error 1
